# swift-package

./: .gitignore  CLAUDE.md  Cargo.toml  README  README.md  build.rs
examples/end-to-end/mymath-lib/: Cargo.toml  build.rs
examples/end-to-end/mymath-lib/include/: module.modulemap
examples/end-to-end/mymath-lib/src/: lib.rs  mymath.udl
examples/end-to-end/mymath-lib/swift/: SwiftMath.swift
examples/end-to-end/swift-exe/: Package.swift  readme.md
examples/end-to-end/swift-exe/Sources/swift-cmd/: swift_cmd.swift
examples/end-to-end/swift-framework/: Package.swift
examples/uniffi/rust-lib/: .gitignore  Cargo.toml  build.rs  gen.sh
examples/uniffi/rust-lib/src/: lib.udl
manual/greeter/: Cargo.toml  Makefile
manual/greeter/src/: Package.swift
manual/swift-exe/: Package.swift
manual/swift-exe/Sources/swift_cmd/: swift_cmd.swift
src/: bindings.rs  lib.rs  main.rs  swift_package_file.rs  swift_resources_ext.rs
src/conf/: args.rs  cli.rs  configuration.rs  mod.rs  spm_cli.rs  swift_package.rs
src/ext/: path.rs
tests/: test.rs
