[package]
name = "swift-package"
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/human-solutions/swift-package"
description = "Cargo plugin and library for building Apple Swift Packages"
categories = ["development-tools::cargo-plugins", "development-tools::ffi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cargo_metadata = { version = "0.18", features = ["builder"] }
camino = "1.1"
fs-err = "2.9"
xcframework = "0.1.0-alpha.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs_extra = "1.3.0"
xflags = "0.3"

[dev-dependencies]
tempfile = "3.3"
