[package]
name = "swift-package"
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/human-solutions/swift-package"
description = "Cargo plugin and library for building Apple Swift Packages"
categories = ["development-tools::cargo-plugins", "development-tools::ffi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# camino-fs = { path = "../camino-fs" }
camino-fs = { git = "https://github.com/human-solutions/camino-fs", tag = "v0.1.3" }
cargo_metadata = "0.18"
fs_extra = "1.3.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
time = "0.3"
uniffi_bindgen = "0.28"
xcframework = { path = "../xcframework" }
xflags = "0.3"

[dev-dependencies]
tempfile = "3.13"

[build-dependencies]
cargo_metadata = "0.18"
