[workspace]

[package]
name = "mymath-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "mymath"
crate-type = ["cdylib"]

[dependencies]
uniffi = "0.28"

[package.metadata.xcframework]
include-dir = "include"
macOS = true

[package.metadata.swift-package]
package-name = "SwiftMath"
udl-file = "src/mymath.udl"
swift-source-dir = "swift"
resource-dirs = ["resources"]
