[workspace]

[package]
name = "mymath-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "mymath"
crate-type = ["cdylib"]

[dependencies]
uniffi = "0.28"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[package.metadata.swift-package]
macOS = true
package-name = "SwiftMath"
udl-file = "src/mymath.udl"
resource-dirs = ["resources"]
