[workspace]

[package]
name = "mymath-lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "mymath"
crate-type = ["cdylib"]

[dependencies]
uniffi = "0.29"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[package.metadata.swift-package]
macOS = true
package-name = "SwiftMath"
udl-file = "src/mymath.udl"
resource-dirs = ["resources"]
